# tokenstream

./: .clang-format  .gitignore  CMakeLists.txt  FORMAT.md  LICENSE  README.md
WindowsNatVis/: TokenStream.natvis
include/TokenStream/: Generic.h  Reader.h  TokenStream.h  Writer.h
src/: EndianTypes.h  Generic.cpp  Reader.cpp  Serializable.cpp  Writer.cpp
tests/: PackageData.cpp  PackageData.h  TokenStreamTest.cpp
